[package]
name = "musicd2"
version = "0.1.0"
authors = ["Konsta Kokkinen <kray@i0.fi>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
bytes = "0.4.12"
chrono = "0.4.7"
clap = "2.33.0"
curl = "0.4.23"
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"] }
image = { version = "0.22.1" }
libc = "0.2.59"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
shellexpand = "1.0"
rusqlite = "0.20.0"
threadpool = "1.7.1"
tokio = "=0.2.0-alpha.6"
