[package]
name = "musicd2"
version = "0.1.0"
authors = ["Konsta Kokkinen <kray@i0.fi>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
bytes = "0.4"
chrono = "0.4"
clap = "2.33"
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"] }
image = "0.22"
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "1.0"
reqwest = "=0.10.0-alpha.2"
rusqlite = "0.20"
tokio = "=0.2.0-alpha.6"